--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="img_overlay">
                         <p>Welcome to</p>
                         <h2>P.C.E.A Makupa</h2>
-                        <a href="#">Get Started</a>
+                        <a href="#id_intro_container">Get Started</a>
                     </div>
                 </div>
                 <div class="slides swiper-slide">
@@ -59,7 +59,7 @@
                     <div class="img_overlay">
                         <p>Welcome to</p>
                         <h2>P.C.E.A Makupa</h2>
-                        <a href="#">Get Started</a>
+                        <a href="#id_intro_container">Get Started</a>
                     </div>
                 </div>
                 <div class="slides swiper-slide">
@@ -67,7 +67,7 @@
                     <div class="img_overlay">
                         <p>Welcome to</p>
                         <h2>P.C.E.A Makupa</h2>
-                        <a href="#">Get Started</a>
+                        <a href="#id_intro_container">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -76,6 +76,31 @@
             <div class="swiper-pagination"></div>
         </div>
     </header>
+
+    <div class="intro_container" id="id_intro_container">
+        <div class="intro_image_container">
+            <img src="imgs/logo.jpg" alt="">
+            <h4>Introduction</h4>
+        </div>
+        <div class="intro_paragraph_container">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+             printer took a galley of type and scrambled it to make a type specimen book. It has survived not
+              only five centuries, but also the leap into electronic typesetting, remaining essentially 
+              unchanged</p>
+              <br>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a
+                 page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-
+                 less normal distribution of letters, as opposed to using 'Content here, content here', making
+                  it look like readable English. Many desktop publishing packages and web page editors now
+                 use Lorem Ipsum as their</p>
+        </div>
+    </div>
+
+    <div class="youtube_container">
+       
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="app.js"></script>
 </body>
