map done, footer done, give button added,

--- a/about_us.html
+++ b/about_us.html
@@ -17,6 +17,35 @@
 
 </head>
 <body>
-    
+  <nav>
+    <div class="logo">
+        <a href="index.html"><img src="imgs/logo.jpg" alt="logo"/></a>
+        <h4 class="logoName">P.C.E.A Makupa</h4>
+    </div>
+    <ul class="nav-links">
+      <li>
+        <a href="index.html">Home</a>
+    </li>
+        <li>
+            <a href="https://www.youtube.com/@p.c.e.amakupachurch1590" target="_blank">Live</a>
+        </li>
+        <li>
+            <a href="https://maps.app.goo.gl/QGXNUWnQHAWKgHtG6" target="_blank">Find Us</a>
+        </li>
+        <li>
+            <a href="#footer">Contact Us</a>
+        </li>
+        <li>
+            <a href="#" style="background-color:turquoise; color: white; padding: 10px 20px; border-radius: 5px;">Give</a>
+        </li>
+        
+    </ul>
+    <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+    </div>
+</nav>
+<script src="app1.js"></script>
 </body>
 </html>
