--- a/about_us.html
+++ b/about_us.html
@@ -21,7 +21,7 @@
   <nav>
     <div class="logo">
         <a href="index.html"><img src="imgs/logo.jpg" alt="logo"/></a>
-        <h4 class="logoName">P.C.E.A Makupa</h4>
+        <h4 class="logoName">P.C.E.A Makupa Parish</h4>
     </div>
     <ul class="nav-links">
       <li>
