scroll to top button

--- a/about_us.html
+++ b/about_us.html
@@ -15,6 +15,7 @@
   />
   <link rel="icon" type="image/png" href="imgs/logo.jpg"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 </head>
 <body>
@@ -149,6 +150,8 @@
       </div>
   </div>
   </div>
+
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-circle-up" style="font-size:36px;color:blue"></i></button>
 
 
 
