--- a/index.html
+++ b/index.html
@@ -194,7 +194,12 @@
             <a href="https://maps.app.goo.gl/QGXNUWnQHAWKgHtG6" target="_blank">Find Us &nbsp <i class="fas fa-map-marker-alt"></i></a>
         </div>
     </div>
-   
+
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-circle-up" style="font-size:36px;color:blue"></i></button>
+
+
+
     <footer id="footer">
 
         <div class="container__footer">
