leaders button and page initialzation

--- a/about_us.html
+++ b/about_us.html
@@ -32,6 +32,9 @@
             <a href="https://www.youtube.com/@p.c.e.amakupachurch1590" target="_blank">Live</a>
         </li>
         <li>
+          <a href="leaders.html">Leaders</a>
+      </li>
+        <li>
             <a href="https://maps.app.goo.gl/QGXNUWnQHAWKgHtG6" target="_blank">Find Us</a>
         </li>
         <li>
