--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <a href="#youtube">Live</a>
             </li>
             <li>
+                <a href="#leaders_church">Leaders</a>
+            </li>
+            <li>
                 <a href="#map">Find Us</a>
             </li>
             <li>
@@ -143,7 +146,7 @@
         </div>
     </div>
 
-    <h1 class="header" style="color: blue;">The Church Leaders</h1>
+    <h1 id="leaders_church" class="header" style="color: blue;">The LLC Leaders</h1>
 
     <div class="card-container">
         <div class="card">
@@ -178,7 +181,9 @@
             </div>
         </div>
     </div>
-
+    <div class="other-leaders-button">
+        <a href="leaders.html" class="btn-blue">More Leaders</a>
+    </div>
      
     <div id="map" class="map_container">
         
