--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
                      of our thriving community. Together, we can strengthen our faith and make a positive impact in the world.</p>
 
                  <!-- button to be taken to learn more page -->
-                 <a href="about_us.html">Learn More</a>
+                 <a href="about_us.html" style="margin-bottom: 15px;">Learn More</a>
         </div>
         
     </div>
 
     
-    <p id="service-xx" style="color: blue;">We Invite You To Join Us For Worship:</p>
-    <h1 class="header" style="color: blue;">Service Times</h1>
+    <p id="service-xx" style="color: blue;">We Invite You To Join Us For Worship</p>
+    <h1 class="header" style="color: blue;">Service Times:</h1>
     <section class="service-time">
         <div class="container1">
             <div class="service-box">
