mpesa form added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#footer">Contact Us</a>
             </li>
             <li>
-                <a href="#" style="background-color:turquoise; color: white; padding: 10px 20px; border-radius: 5px;">Give</a>
+                <a href="give.html" style="background-color:turquoise; color: white; padding: 10px 20px; border-radius: 5px;">Give</a>
             </li>
             
         </ul>
